# bloom_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Package.swift  README.md  run_test.sh
.github/workflows/: pr.yml
.swiftpm/xcode/package.xcworkspace/xcuserdata/jaceklyp.xcuserdatad/: UserInterfaceState.xcuserstate
.swiftpm/xcode/xcuserdata/jaceklyp.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: BloomFilter.cpp  BloomFilter.hpp  CMakeLists.txt  module.modulemap
test/: BloomFilterTest.cpp  CMakeLists.txt  empty.cpp  legacyBloomStrings.txt  speedtest.cpp
utils/: CMakeLists.txt  GenerateFilter.cpp
